# revtrust

./: # RevTrust - Master Instructions.md  .gitignore  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  IMPROVEMENTS.md  MONITORING_SCHEDULED_REVIEWS.md  POST_SESSION_23_SETUP.md  QUICK_DEPLOY.md  README.md  SESSION_10_COMPLETE.md  SESSION_19_SUMMARY.md  SESSION_21_PROGRESS.md  STARTUP_GUIDE.md  archived.hubspot.config.yml  br.csv  business-rules-test-pipeline.xlsx  context.md  dump.rdb  git_local.sh  git_remote.sh  health_check.sh  move_repo.sh  start_revtrust.sh  stop_revtrust.sh  vercel.json
backend/: .env.bak  .env.example  .env.production.example  Procfile  check_scheduler.py  diagnose_hubspot.py  events_log.jsonl  manual_trigger_review.py  nixpacks.toml  purge_database.py  pyproject.toml  railway.toml  start_worker.sh  test_ai_service.py  test_analysis_flow.py  test_pipeline.csv  test_rules_engine.py  test_sales_pipelines_generated.csv  test_sales_pipelines_generated.xlsx  test_scan_flow.py  test_scheduled_review.py  test_scheduler_run.py  ~$test_sales_pipelines_generated.xlsx
backend/app/: auth.py  main.py  worker.py
backend/app/jobs/: scheduled_review_job.py
backend/app/models/: crm_write.py  forecast.py  organization.py  rules.py
backend/app/routes/: admin.py  admin_prompts.py  ai_analysis.py  analytics.py  analyze.py  crm_oauth.py  crm_write.py  dashboard.py  email_test.py  feedback.py  forecast.py  health.py  organizations.py  output_templates.py  rules.py  saved_scans.py  scan.py  scheduled_reviews.py  settings.py  stripe_routes.py  user.py  webhooks.py
backend/app/services/: ai_service.py  crm_write_service.py  delivery_service.py  email_delivery_service.py  email_service.py  encryption_service.py  experiment_service.py  forecast_service.py  hubspot_service.py  (+9 more)
backend/config/: business-rules.yaml  field-mappings.yaml
backend/prisma/: schema.prisma
backend/scripts/: deploy_prompts_feature.py  seed_prompts.py
backend/tests/: conftest.py
(+152 files in other folders)
